# Conway3D

./: CMakeLists.txt  README.md
src/: conway.cpp  main.cpp
